--- a/web/app.css
+++ b/web/app.css
@@ -33,7 +33,7 @@
 }
 
 .switch-field input:checked + label {
-  background-color: #a5dc86;
+  background-color: #673ab7;
   box-shadow: none;
 }
 
@@ -51,14 +51,15 @@
   font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
   font-weight: normal;
   line-height: 1.625;
-  margin: 8px auto;
+  margin: 100px auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 50px;
   z-index: 2;
-  border: 1px solid black;
-  border-radius: 20px;
+  border: 2px solid #e5e5e5;
+  border-top: 10px solid #673ab7;
+  border-radius: 10px;
 }
 
 h2 {
@@ -93,29 +94,29 @@ h2 {
 }
 
 .submit {
-  background: #a5dc86;
+  background: #673ab7;
   border: 0;
+  color: #fff;
+  padding: 10px 20px;
   cursor: pointer;
   margin: 25px 0 10px;
   box-sizing: border-box;
-  font-size: 15px;
-  height: 35px;
   text-align: center;
   border-radius: 5px;
 }
 
 .submit:hover {
-  background: #a1f173;
+  background: #673ab7;
+  opacity: 0.9;
 }
 
 .result {
-  background: #dcd686;
-  border: 0;
+  background: #f2f2f2;
+  padding: 10px;
+  border-radius: 5px;
   margin: 25px 0 10px;
   box-sizing: border-box;
-  font-size: 15px;
-  height: 35px;
-  text-align: center;
+  height: 50px;
 }
 
 .img {
@@ -138,5 +139,5 @@ h2 {
 body,
 html {
   height: 100%;
-  background: lightgray;
+  background: #f0ecf9;
 }
